gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22.d
version https://git-lfs.github.com/spec/v1
oid sha256:1198d6216055532ca3ec7086ac24e86f0e79b0002d29c3fc03ba768edefd6c4e
size 201
